Bug 1251894 - In CompositorD3D11::CreateTexture, copy as much as the render target allows. r=bas, a=ritu

MozReview-Commit-ID: KK5wu3T4tLE